--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"dependencies": {
 		"chart.js": "3.3.2",
 		"core-js": "^3.6.5",
+		"pinia": "^2.0.14",
 		"primeflex": "^3.1.2",
 		"primeicons": "^5.0.0",
 		"primevue": "^3.12.2",
