--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
-	"name": "sakai-vue",
-	"version": "3.4.2-SNAPSHOT",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/primefaces/sakai-vue.git"
-	},
+	"name": "litoprocess",
+	"version": "3.4.3",
 	"license": "MIT",
 	"scripts": {
 		"serve": "vue-cli-service serve",
@@ -25,6 +21,7 @@
 		"sass-loader": "^8.0.2"
 	},
 	"dependencies": {
+		"axios": "^0.27.2",
 		"chart.js": "3.3.2",
 		"core-js": "^3.6.5",
 		"pinia": "^2.0.14",
